--- a/InhalerUI_V4.html
+++ b/InhalerUI_V4.html
@@ -118,7 +118,7 @@
     </div>
     <!-- 肺部沈積率圖像 -->
     <div id="lungsBox">
-      <img src="lungs.png" id="lungsImg" width="267" height="234" alt="肺部圖像">
+      <img src="img/lungs.png" id="lungsImg" width="267" height="234" alt="肺部圖像">
       <div id="lungsFill"></div>
       <div id="lungsPercent"></div>
     </div>
@@ -145,17 +145,17 @@ const instructions = [
 const stepImagesData = [
   // step 0
   [
-    { src: "lidOff_highRes.png", alt: "取下吸入器蓋子", caption: "取下吸入器蓋子" },
-    { src: "clockwise.png", alt: "順時針旋轉", caption: "順時針旋轉" }
+    { src: "img/lidOff_highRes.png", alt: "取下吸入器蓋子", caption: "取下吸入器蓋子" },
+    { src: "img/clockwise.png", alt: "順時針旋轉", caption: "順時針旋轉" }
   ],
   // step 1
   [
-    { src: "lidOff_highRes.png", alt: "取下吸入器蓋子", caption: "取下吸入器蓋子" },
-    { src: "counterclockwise.png", alt: "逆時針旋轉", caption: "逆時針旋轉" }
+    { src: "img/lidOff_highRes.png", alt: "取下吸入器蓋子", caption: "取下吸入器蓋子" },
+    { src: "img/counterclockwise.png", alt: "逆時針旋轉", caption: "逆時針旋轉" }
   ],
   // step 2
   [
-    { src: "breatheOutandIn.png", alt: "吐氣吸氣示意", caption: "吐氣3秒後深吸3秒" }
+    { src: "img/breatheOutandIn.png", alt: "吐氣吸氣示意", caption: "吐氣3秒後深吸3秒" }
   ],
   // step 3
   []
