--- a/HomePage.html
+++ b/HomePage.html
@@ -274,7 +274,7 @@ function showLungFill(budld) {
 }
 
 document.getElementById("loginBtn").onclick = function() {
-    window.location.href = "login.html";
+    window.location.href = "Login.html";
 };
 
 document.getElementById('connectBtn').onclick = async function () {
