--- a/Login.html
+++ b/Login.html
@@ -126,7 +126,7 @@
     </div>
   </div>
 
-  <script>
+  <script type='module'>
     // 替換成你的 Supabase 設定
     import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm';
     const SUPABASE_URL = 'https://jqdtlkxvyrrpnbkyiigg.supabase.co';
