--- a/InhalerUI_V4.html
+++ b/InhalerUI_V4.html
@@ -41,7 +41,7 @@
       /* 這裡不再設 max-width，交由圖片本身控制 */
     }
     .imgbox img {
-      height: 180px;      /* 統一高度 */
+      height: 270px;      /* 統一高度 */
       width: auto;        /* 保持比例 */
       object-fit: contain;
       background: #f7faf7;
@@ -177,8 +177,8 @@ const instructions = [
 const stepImagesData = [
   // step 0
   [
-    { src: "img/lidOff_highRes.png", alt: "取下吸入器蓋子", caption: "取下吸入器蓋子" },
-    { src: "img/clockwise.png", alt: "順時針旋轉", caption: "順時針旋轉" }
+    { src: "img/lidOff_correct.png", alt: "取下吸入器蓋子", caption: "取下吸入器蓋子" },
+    { src: "img/clockwise.png", alt: "順時針旋轉", caption: "插入裝置底座順時針旋轉" }
   ],
   // step 1
   [
