--- a/login.html
+++ b/login.html
@@ -252,7 +252,9 @@
           email,
           password,
           options: {
-            data: { username: username || null }
+            data: {
+              username: username ? username : null // or simply: username || null
+            }
           }
         });
         
