--- a/login.html
+++ b/login.html
@@ -253,7 +253,7 @@
           password,
           options: {
             data: {
-              username: username ? username : null // or simply: username || null
+              display_name: username ? username : null // or simply: username || null
             }
           }
         });
