--- a/userTable.html
+++ b/userTable.html
@@ -87,7 +87,7 @@
       user = currentUser;
       document.getElementById('user-name').textContent = user.user_metadata?.display_name || user.email;
       document.getElementById('user-id').textContent = 'ID: ' + user.id;
-      document.getElementById('user-avatar').src = `https://ui-avatars.com/api/?name=${encodeURIComponent(user.user_metadata?.full_name || user.email)}`;
+      document.getElementById('user-avatar').src = `https://ui-avatars.com/api/?name=${encodeURIComponent(user.user_metadata?.display_name || user.email)}`;
 
       // 取得使用者資料夾下所有 txt 檔案
       const { data, error } = await supabase
